--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
